lots of changes

--- a/views/deposit/add/index.handlebars
+++ b/views/deposit/add/index.handlebars
@@ -6,14 +6,22 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      {{#if amountNeeded}}
+      {{#if amountNeededBid}}
             <div id="card-alert" class="card red lighten-5">
               <div class="card-content red-text">
                 <i class="mdi-alert-error"></i>
-                <p><center>You need a minimum balance of: {{amountNeeded}}</center></p>
+                <p><center>You need a minimum balance of: {{amountNeededBid}}, to make that bid</center></p>
               </div>
             </div>
       {{/if}}
+      {{#if amountNeededWin}}
+            <div id="card-alert" class="card red lighten-5">
+              <div class="card-content red-text">
+                <i class="mdi-alert-error"></i>
+                <p><center>You need a minimum balance of: {{amountNeededWin}}, to select that winning developer</center></p>
+              </div>
+            </div>
+      {{/if}
       
       <h5 class="center-align">Current total amount in your wallet: {{balance}}</h5>
 
