--- a/views/posts/new-bid/index.handlebars
+++ b/views/posts/new-bid/index.handlebars
@@ -24,11 +24,16 @@
   <div class="row">
 
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+      <center>
+        <h4>
+          Current Amount in wallet: {{totalMoney}}
+        </h4>
+      </center>
       <form name="create-post" action="/posts/{{poster}}/{{slug}}/new-bid" method="post">
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>Amount</label>
-            <input type="number" class="form-control" min="0.01" step="0.01" max="{{totalMoney}}" value="50.00" name = "price" equired data-validation-required-message="Please enter a value." />
+            <input type="number" class="form-control" min="0.01" step="0.01" max="{{totalMoney}}" value="50.00" name = "price" required data-validation-required-message="Please enter a value." />
             <input type="hidden" name="username" value="{{poster}}"/>
             <input type="hidden" name="slug" value="{{slug}}"/>
             <p class="help-block text-danger"></p>
