--- a/views/tools/index.handlebars
+++ b/views/tools/index.handlebars
@@ -13,6 +13,9 @@
             {{/if}}
           </a>
         </li>
+        <li class="tab"><a href="/#quitRequests">Quit Requests</a></li>
+        {{!-- <li class="tab"><a href="/#warnedUsers">Warned Users</a></li> --}}
+        <li class="tab"><a href="/#blackList">Blacklist</a></li>
         <li class="tab"><a  href="/#workOrders">
           Work Orders
           {{#if numOfAttentionWorkOrders}}
@@ -20,41 +23,80 @@
             {{/if}}
           </a>
         </li>
-        <li class="tab"><a href="/#warnedUsers">Warned Users</a></li>
-        <li class="tab"><a href="/#blackList">Blacklist</a></li>
       </ul>
     </div>
   </nav>
 
 
 </header>
-
-
-  <div id="warnedUsers" class="col s12">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-          <div class="site-heading">
-            <h3>Warned Users</h3>
-            <hr class="small">
-          </div>
+<div  id="quitRequests">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+        <div class="site-heading">
+          
+          <h3>Quit Requests</h3>
+          <hr class="small">
         </div>
       </div>
     </div>
-
-    <div class="container">
+  </div>
+  <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-        <ul id="warnedUsersUL" class="collection">
+
+        <div class="input-field">
+          <input id="quitSearch" onkeyup="quitSearch()" type="search" placeholder="Search for users..">
+          <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+        </div>
         
-        
+        <ul id="quitUL" class="collection">
+        {{#each needsApprovedQuit}}
+          <li>
+            <a class="collection-item" href="/quit/get/{{this.id}}">
+                <h7 class="col s4">{{this.username}}</h7>
+                <span class="new badge deep-orange lighten-1" data-badge-caption="&nbsp;Pending &nbsp"></span>
+            </a>
+          </li>
+        {{/each}}
+        {{#each approvedQuit}}
+          <li>
+            {{!-- <a class="collection-item" href="/tools/user/{{this.username}}"> --}}
+                <h7 class="col s4">{{this.username}}</h7>
+                <span class="new badge blue-grey lighten-2" data-badge-caption="&nbsp;Closed &nbsp"></span>
+            {{!-- </a> --}}
+          </li>
+        {{/each}}
         </ul>
 
       </div>
     </div>
   </div>
+</div>
 
+
+
+{{!-- <div id="warnedUsers" class="col s12">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+        <div class="site-heading">
+          <h3>Warned Users</h3>
+          <hr class="small">
+        </div>
+      </div>
+    </div>
   </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+        <ul id="warnedUsersUL" class="collection">
+        </ul>
+      </div>
+    </div>
+  </div>
+</div> --}}
 
   <div id="blackList" class="col s12">
     <div class="container">
@@ -67,11 +109,14 @@
         </div>
       </div>
     </div>
-
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-          <ul id="blackListUL" class="collection">
+        <div class="input-field">
+          <input id="blackSearch" onkeyup="blackSearch()" type="search" placeholder="Search for users..">
+          <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+        </div>
+          <ul id="blackUL" class="collection">
             {{#each allBlockedUsers}}
               <li>
                 <a class="collection-item" href="/tools/user/{{this.username}}">
@@ -126,15 +171,6 @@
                 <h7 class="col s4" style="color:black;">{{this.accountType}}</h7>
                  <span class="new badge green" data-badge-caption="Approved"></span>
                </a>
-          </li>
-        {{/each}}
-        {{#each allBlockedUsers}}
-          <li>
-            <a class="collection-item" href="/tools/user/{{this.username}}">
-                <h7 class="col s4">{{this.username}}</h7>
-                <h7 class="col s4" style="color:black;">{{this.accountType}}</h7>
-                 <span class="new badge red accent-4" data-badge-caption="&nbsp;Blocked  &nbsp"></span>
-            </a>
           </li>
         {{/each}}
         </ul>
@@ -238,7 +274,38 @@ function usersSearch() {
         }
     }
 }
+function quitSearch() {
+    var input, filter, ul, li, a, i;
+    input = document.getElementById("quitSearch");
+    filter = input.value.toUpperCase();
+    ul = document.getElementById("quitUL");
+    li = ul.getElementsByTagName("li");
+    for (i = 0; i < li.length; i++) {
+        a = li[i].getElementsByTagName("a")[0];
+        if (a.innerHTML.toUpperCase().indexOf(filter) > -1) {
+            li[i].style.display = "";
+        } else {
+            li[i].style.display = "none";
 
+        }
+    }
+}
+function blackSearch() {
+    var input, filter, ul, li, a, i;
+    input = document.getElementById("blackSearch");
+    filter = input.value.toUpperCase();
+    ul = document.getElementById("blackUL");
+    li = ul.getElementsByTagName("li");
+    for (i = 0; i < li.length; i++) {
+        a = li[i].getElementsByTagName("a")[0];
+        if (a.innerHTML.toUpperCase().indexOf(filter) > -1) {
+            li[i].style.display = "";
+        } else {
+            li[i].style.display = "none";
+
+        }
+    }
+}
 function workOrdersSearch() {
     var input, filter, ul, li, a, i;
     input = document.getElementById("workOrdersSearch");
