added init files for user dashboard

--- a/views/login/index.handlebars
+++ b/views/login/index.handlebars
@@ -22,7 +22,7 @@
         <div class="col s12 m6 offset-m3">
           <div class="card white darken-1 hoverable">
             <div class="card-content black-text">
-              {{!-- <span class="card-title center-align">Login</span> --}}
+              <p class="center-align">Welcome Back!</p>
               <input type="email" name="email" placeholder='Email Address' required>
               <input type="password" name="password" placeholder='Password' required>
 
