--- a/views/set-up/index.handlebars
+++ b/views/set-up/index.handlebars
@@ -30,24 +30,25 @@
       <form name="upload-profile" action="/set-up" method="post" enctype="multipart/form-data">
 
         <div class="row control-group">
-          <div class="form-group col-xs-6 floating-label-form-group controls">
-            <label>First Name</label>
+{{!--           <div class="form-group col-xs-6 floating-label-form-group controls"> --}}
+          <div class="col s4 m6">
+{{!--             <label>First Name</label> --}}
             <input type="text" class="form-control" placeholder="First Name" name="firstName" required data-validation-required-message="Please enter your first name.">
             <p class="help-block text-danger"></p>
           </div>
 
 
-          <div class="form-group col-xs-6 floating-label-form-group controls">
-            <label>Last Name</label>
+          <div class="col s4 m6">
+{{!--             <label>Last Name</label> --}}
             <input type="text" class="form-control" placeholder="Last Name" name="lastName" required data-validation-required-message="Please enter your first name.">
             <p class="help-block text-danger"></p>
           </div>
         </div>
         
         <div class="row control-group">
-          <div class="form-group col-xs-12 floating-label-form-group controls">
+          <div class="col s6 m6 offset-m3">
 
-            <label >Upload a Profile Picture:</label>
+            <label>Upload a Profile Picture:</label>
             <input type="file" name="profileImage" id="profileImage"/>
             <span class="hint">Supported files: jpg, jpeg, png.</span>
             <hr class="divider">
@@ -74,9 +75,9 @@
         </div>
         {{else}} 
         <div class="row control-group">
-          <div class="form-group col-xs-12 floating-label-form-group controls">
+          <div class="col s8 m6 offset-m3">
             <label>Biography</label>
-            <input type="text" class="form-control" placeholder="Bio" name="bio" required data-validation-required-message="Please fill in your bio.">
+            <input type="text" class="form-control" placeholder="Biography" name="bio" required data-validation-required-message="Please fill in your bio.">
             <p class="help-block text-danger"></p>
           </div>
         </div>
@@ -84,7 +85,7 @@
 
         <br>
         <div class="row">
-          <div class="form-group col-xs-12">
+          <div class="col s2 offset-m5">
               <button type="submit" class="btn btn-default">Done</button>
           </div>
         </div>
