--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -113,7 +113,7 @@
       <div class="row">
         {{#each topDevelopers}}
           <div class="col s4">
-            <a href="/profile/{{this.username}}">
+            <a href="/profile/show/{{this.username}}">
               <p><font color="black">{{this.username}}</p></font>
               <img src="/profile_pics/{{this.profile.profileImage}}" class="circle responsive-img z-depth-5 hoverable" alt="" style="width:100px">
               <p><font color="black">{{this.profile.firstName}}</font></p>
@@ -126,7 +126,7 @@
       <div class="row">
          {{#each topCustomers}}
           <div class="col s4">
-            <a href="/profile/{{this.username}}">
+            <a href="/profile/show/{{this.username}}">
               <p><font color="black">{{this.username}}</p></font>
               <img src="/profile_pics/{{this.profile.profileImage}}" class="circle responsive-img z-depth-5 hoverable" alt="" style="width:100px">
               <p><font color="black">{{this.profile.firstName}}</font></p>
