--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,7 +35,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <body>
       <ul id="dropdown1" class="dropdown-content">
-      <li><a href="/profile"><i class="material-icons">face</i>Profile</a></li>
+      <li><a href="/profile/show"><i class="material-icons">face</i>Profile</a></li>
       <li><a href="#!"><i class="material-icons">work</i>My Bids</a></li>
       <li><a href="#!"><i class="material-icons">mail_outline</i>Messages</a></li>
       <li><a href="#!"><i class="material-icons">settings</i>Settings</a></li>
