--- a/views/profile/edit/index.handlebars
+++ b/views/profile/edit/index.handlebars
@@ -3,71 +3,108 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <div class="page-heading">
-          <h3>{{user.username}}</h3>
+          <h3>Edit Your Profile</h3>
           <hr class="small">
-          <span class="subheading">{{profile.firstName}} {{profile.lastName}}</span>
+          <span class="subheading">Public Profile</span>
         </div>
       </div>
     </div>
   </div>
 </header>
 
-<main>
+<div class="container">
 
-<div class="container center-align">
+          {{#if error}}
+            <div id="card-alert" class="card red lighten-5">
+              <div class="card-content red-text">
+                <i class="mdi-alert-error"></i>
+                <p><center>ERROR</center></p>
+              </div>
+            </div>
+          {{/if}}
+          
   <div class="row">
-  <div class="col-lg-1 col-lg-offset-2 col-md-10 col-md-offset-1">
-    <form name="edit-profile" action="/profile/edit?_method=PUT" method="post" enctype="multipart/form-data">
-      <img src="/profile_pics/{{profile.profileImage}}" class="img-rounded" alt="" style="width:200px">
-      <div class="row control-group">
-        <div class="form-group col-xs-12 floating-label-form-group controls">
-          <label >Upload a Profile Picture:</label>
-          <input type="file" name="profileImage" id="profileImage"/>
-          <input type="hidden" name="oldImage"  id="oldImage" value="{{profile.profileImage}}">
-          <span class="hint">Supported files: jpg, jpeg, png.</span>
-          <hr class="divider">
-          <br>
-        </div>
-      </div>
-      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      
-          <input type="hidden" name="firstName" value="{{profile.firstName}}">
-          <input type="hidden" name="lastName" value="{{profile.lastName}}">
-      {{#if developer}}
+
+<div class="card hoverable">
+    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+      <div class="card-content black-text">
+      <form name="upload-profile" action="/profile/edit" method="post" enctype="multipart/form-data">
+<br><br>
         <div class="row control-group">
-          <div class="form-group col-xs-12 floating-label-form-group controls">
-            <label>Biography</label>
-            <input type="text" class="form-control" placeholder="{{profile.bio}}" value="{{profile.bio}}" name="bio" required data-validation-required-message="Please fill in your bio.">
+          <div class="col s3 offset-s2">
+            <center><label>First Name</label>
+            <input type="text" style="text-align:center;" class="form-control" value="{{profile.firstName}}" disabled name="firstName" required >
+            <p class="help-block text-danger"></p>
+            </center>
+          </div>
+
+
+          <div class="col s3  offset-s2">
+            <center>
+            <label>Last Name</label>
+            <input style="text-align:center;" type="text" class="form-control" value="{{profile.lastName}}" name="lastName" disabled required >
+            <p class="help-block text-danger"></p>
+            </center>
+          </div>
+        </div>
+        <br>
+        <div class="row control-group">
+          <div class="col s6 offset-s3">
+
+            <label >Upload a Profile Picture:</label>
+            <input style="text-align:center;" type="file" name="profileImage" id="profileImage"/>
+            <span class="hint">Supported files: jpg, jpeg, png.</span>
+            <hr class="divider">
+            <br>
+          </div>
+        </div>
+
+        {{#if customer}}
+        <div class="row control-group">
+          <div class="col s6 offset-s3">
+            <label>Company Website</label>
+            <input type="url" class="form-control" style="text-align:center;" value="{{profile.companyWebsite}}" name="companyWebsite" required >
             <p class="help-block text-danger"></p>
           </div>
         </div>
-      {{/if}}
-      {{#if customer}}
+
+
         <div class="row control-group">
-          <div class="form-group col-xs-12 floating-label-form-group controls">
-            <label>Company Website</label>
-            <input type="url" class="form-control" placeholder="{{profile.companyWebsite}}" value="{{profile.companyWebsite}}" name="companyWebsite" required data-validation-required-message="Please fill in company website">
+          <div class="col s6 offset-s3">
+            <label>Company Information</label>
+            <input type="text" class="form-control" style="text-align:center;" name="companyInfo" value="{{profile.companyInfo}}" required>
+            <p class="help-block text-danger"></p>
+          </div>
+        </div>
+        {{else}} 
+
+        <div class="row control-group">
+          <div class="col s6 offset-s3">
+            <label>GitHub Link</label>
+            <input type="text" class="form-control" style="text-align:center;" value="{{profile.companyWebsite}}"name="companyWebsite" required >
             <p class="help-block text-danger"></p>
           </div>
         </div>
 
         <div class="row control-group">
-          <div class="form-group col-xs-12 floating-label-form-group controls">
-            <label>Company Information</label>
-            <input type="text" class="form-control" placeholder="{{profile.companyInfo}}" value="{{profile.companyInfo}}" name="companyInfo" required data-validation-required-message="Please fill in your company information.">
+          <div class="col s6 offset-s3">
+            <label>Biography</label>
+            <input type="text" class="form-control" style="text-align:center;" name="bio" value="{{profile.bio}}">
             <p class="help-block text-danger"></p>
           </div>
         </div>
-      {{/if}}
+        {{/if}}
 
         <br>
         <div class="row">
-          <div class="form-group col-xs-12">
+          <div class="col s6 offset-s3">
               <button type="submit" class="btn btn-default">Done</button>
           </div>
         </div>
       </form>
     </div>
+    </div>
   </div>
 </div>
-</main>
+</div>
+
