--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -100,7 +100,7 @@
 
 
 
-<div class="footer-wrapper" style="text-align:center;">
+<div class="footer-wrapper" >
         <footer class="page-footer tomato{{!-- blue darken-2 --}}">
           <div class="footer-copyright salmon{{!-- blue --}} darken-3">
             <div class="container">
