--- a/views/tools/index.handlebars
+++ b/views/tools/index.handlebars
@@ -1,9 +1,9 @@
   
 <header>
- <nav class="nav-extended">
-    <div class="nav-wrapper ">
+ <nav class="nav-extended grey darken-1">
+    <div class="nav-wrapper grey darken-1">
     </div>
-    <div class="nav-content blue darken-2">
+    <div class="nav-content grey darken-1">
       <ul class="tabs tabs-transparent">
         <li class="tab">
           <a class="active" href="/#users">
