--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -53,7 +53,7 @@
       <li id="logout"><a href="#"><i class="material-icons">exit_to_app</i>Sign Out</a></li>
     </ul>
   <nav class="nav-extended target">
-      <div class="nav-wrapper tomato{{!-- blue darken-3 --}}">
+      <div class="nav-wrapper green darken-3">
         <a href="/" class="brand-logo"><i id="header-logo" class="material-icons">data_usage</i>weDev</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -101,8 +101,8 @@
 
 
 <div class="footer-wrapper">
-        <footer class="page-footer tomato{{!-- blue darken-2 --}}">
-          <div class="footer-copyright salmon{{!-- blue --}} darken-3">
+        <footer class="page-footer tomato green darken-2">
+          <div class="footer-copyright green darken-3">
             <div class="container">
             © 2017 Stark Labs
             </div>
