--- a/views/posts/new-post/index.handlebars
+++ b/views/posts/new-post/index.handlebars
@@ -24,7 +24,7 @@
         </div>
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
-            <label>Description and Project Requirements and Specifications.</label>
+            <label>Project Requirements and Specification</label>
             <input type="text" class="form-control" placeholder="Description" name="body" required data-validation-required-message="Please enter a body.">
             <p class="help-block text-danger"></p>
           </div>
@@ -34,10 +34,10 @@
           <label>Tags</label>
           <div class="chips chips-placeholder"></div>
         </div> --}}
->
+
         <div class="row control-group">
           <div class="form-group col-xs-6 floating-label-form-group controls">
-            <label>Biding Deadline</label>
+            <label>Bidding Deadline</label>
             <input type="datetime-local" class="form-control" id="datefield" name="bidingDeadline" value="-05:00"  required data-validation-required-message="Please enter a date and time.">
             <p class="help-block text-danger"></p>
           </div>
