--- a/views/quit/index.handlebars
+++ b/views/quit/index.handlebars
@@ -17,7 +17,7 @@
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <div class="col s6 offset-s3">
         <br><br><br><br>
-        <h4 class="center-align">We are very said you are leaving us.</h4>
+        <h4 class="center-align">We are very sad you are leaving us.</h4>
         <h5 class="status-subtitle center-align">{{user.accountStatus}}</h5>
         <p class="center-align"> Please reconsider</p>
         <hr>
