--- a/views/posts/edit/index.handlebars
+++ b/views/posts/edit/index.handlebars
@@ -24,7 +24,7 @@
         </div>
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
-            <label>Body</label>
+            <label>Project Requirements and Specification</label>
             <input type="text" class="form-control" name="body" value="{{post.body}}" required data-validation-required-message="Please enter a body.">
             <p class="help-block text-danger"></p>
           </div>
@@ -46,7 +46,7 @@
         <br>
         <div class="row">
           <div class="form-group col-xs-6 text-right">
-              <button type="submit" class="btn btn-default">Edit</button>
+              <button type="submit" class="btn btn-default">Update</button>
           </div>
           <br>
       </form>
