--- a/views/deposit/add/index.handlebars
+++ b/views/deposit/add/index.handlebars
@@ -6,7 +6,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      {{#if amountNeededBid}}
+{{!--       {{#if amountNeededBid}}
             <div id="card-alert" class="card red lighten-5">
               <div class="card-content red-text">
                 <i class="mdi-alert-error"></i>
@@ -21,7 +21,7 @@
                 <p><center>You need a minimum balance of: {{amountNeededWin}}, to select that winning developer</center></p>
               </div>
             </div>
-      {{/if}
+      {{/if} --}}
       
       <h5 class="center-align">Current total amount in your wallet: {{balance}}</h5>
 
